# learn_wgpu

./: Cargo.toml  index.html
res/: baba.mtl  ball.mtl  earth.mtl  moon.mtl
src/: buffer.rs  camera.rs  data.rs  depth.rs  lib.rs  light.rs  light.wgsl  main.rs  model.rs  render.rs  resources.rs  shader.wgsl  shader_depth.wgsl  shader_mtl.wgsl  state.rs  texture.rs  vertex.rs
