[package]
name = "learn_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.12.1", features = ["derive"] }
cfg-if = "1.0.0"
env_logger = "0.9.0"
log = "0.4.17"
pollster = "0.2.5"
#tailog = { version = "0.1.0", path = "../../../../../home/zach/projects/tailog" }
wgpu = "0.13"
winit = "0.27.2"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.13", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
