[package]
name = "learn_wgpu"
version = "0.1.0"
edition = "2021"

[build-dependencies]
anyhow = "1.0.62"
fs_extra = "1.2.0"
glob = "0.3.0"

[dependencies]
bytemuck = { version = "1.12.1", features = ["derive"] }
cfg-if = "1.0.0"
env_logger = "0.9.0"
log = "0.4.17"
pollster = "0.2.5"
wgpu = "0.13"
winit = "0.27.2"
cgmath = "0.18.0"
futures-intrusive = "0.4.0"
png = "0.17.5"
anyhow = "1.0.62"
tobj = { version = "3.2.3", features = ["async"] }

[dependencies.image]
version = "0.24.3"
default-features = false
features = ["png", "jpeg"]

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
reqwest = { version = "0.11" }
wgpu = { version = "0.13", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
